<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/reTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/title_bg"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            android:id="@+id/tvBlank"
            android:layout_width="fill_parent"
            android:layout_height="35dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvBlank" >

            <LinearLayout
                android:id="@+id/llBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="bottom" >

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/iv_back_black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/back"
                    android:textColor="@color/black"
                    android:textSize="@dimen/level_4" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="50dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/level_3" />

            <TextView
                android:id="@+id/tvControl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textColor="@color/black"
                android:textSize="@dimen/level_4"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/ivShare"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/iv_share_black"
                android:visibility="gone" />
        </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#dddddd" />

    <LinearLayout
        android:id="@+id/llMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible" >

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" >

            <ImageView
                android:id="@+id/iv1"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/iv_jiangshui_selected" />

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/rainfall"
                android:textColor="@color/sure_color"
                android:textSize="@dimen/level_5" />
        </LinearLayout>

        <TextView
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="#dddddd" />

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/station_color1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" >

            <ImageView
                android:id="@+id/iv2"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/iv_wendu" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/temp"
                android:textColor="@color/text_color4"
                android:textSize="@dimen/level_5" />
        </LinearLayout>

        <TextView
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="#dddddd" />

        <LinearLayout
            android:id="@+id/ll3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/station_color1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" >

            <ImageView
                android:id="@+id/iv3"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/iv_shidu" />

            <TextView
                android:id="@+id/tv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/humidity"
                android:textColor="@color/text_color4"
                android:textSize="@dimen/level_5" />
        </LinearLayout>

        <TextView
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="#dddddd" />

        <LinearLayout
            android:id="@+id/ll4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/station_color1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" >

            <ImageView
                android:id="@+id/iv4"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/iv_wind" />

            <TextView
                android:id="@+id/tv4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/wind_speed"
                android:textColor="@color/text_color4"
                android:textSize="@dimen/level_5" />
        </LinearLayout>

        <TextView
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="#dddddd" />

        <LinearLayout
            android:id="@+id/ll5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/station_color1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" >

            <ImageView
                android:id="@+id/iv5"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/iv_visible" />

            <TextView
                android:id="@+id/tv5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/visible"
                android:textColor="@color/text_color4"
                android:textSize="@dimen/level_5" />
        </LinearLayout>

        <TextView
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="#dddddd" />

        <LinearLayout
            android:id="@+id/ll6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/station_color1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" >

            <ImageView
                android:id="@+id/iv6"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/iv_qiya" />

            <TextView
                android:id="@+id/tv6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/pressure"
                android:textColor="@color/text_color4"
                android:textSize="@dimen/level_5" />
        </LinearLayout>
    </LinearLayout>

    <com.hf.tianjin.view.MainViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

</LinearLayout>