<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ececec"
    android:clickable="true"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/reMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/title_bg_else"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            android:id="@+id/tvBlank"
            android:layout_width="fill_parent"
            android:layout_height="30dp" />
        
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:src="@drawable/iv_logo"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/tvBlank"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp" >

                <ImageView
                    android:id="@+id/ivCity"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/iv_city" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@+id/ivCity"
                    android:gravity="center_vertical"
                    android:text="@string/save_citys"
                    android:textColor="@color/black"
                    android:textSize="@dimen/level_4" />

                <ImageView
                    android:id="@+id/ivAdd"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/iv_add_black" />
            </RelativeLayout>

            <com.hf.tianjin.swipemenulistview.SwipeMenuListView
                android:id="@+id/cityListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cacheColorHint="@color/transparent"
                android:divider="@color/transparent"
                android:dividerHeight="0.5dp"
                android:listSelector="@color/transparent"
                android:overScrollMode="never"
                android:scrollbarThumbVertical="@drawable/scrollbar_vertical_thumb" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp" >

                <ImageView
                    android:id="@+id/ivSetting"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/iv_setting" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@+id/ivSetting"
                    android:gravity="center_vertical"
                    android:text="@string/setting"
                    android:textColor="@color/black"
                    android:textSize="@dimen/level_4" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:background="@color/gray" />
            
            <LinearLayout
                android:id="@+id/llAboutUs"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/selector_detail"
                android:gravity="center_vertical"
                android:paddingBottom="5dip"
                android:paddingLeft="15dip"
                android:paddingRight="10dip"
                android:paddingTop="5dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/setting_about"
                    android:textColor="@color/text_color4"
                    android:textSize="@dimen/level_4" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/iv_arrow" />
            </LinearLayout>
            
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:background="@color/gray" />
            
            <LinearLayout
                android:id="@+id/llFeedBack"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/selector_detail"
                android:gravity="center_vertical"
                android:paddingBottom="5dip"
                android:paddingLeft="15dip"
                android:paddingRight="10dip"
                android:paddingTop="5dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/setting_feedback"
                    android:textColor="@color/text_color4"
                    android:textSize="@dimen/level_4" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/iv_arrow" />
            </LinearLayout>
            
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:background="@color/gray" />

            <LinearLayout
                android:id="@+id/llClearCache"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/selector_detail"
                android:gravity="center_vertical"
                android:paddingBottom="5dip"
                android:paddingLeft="15dip"
                android:paddingRight="10dip"
                android:paddingTop="5dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/setting_clearcache"
                    android:textColor="@color/text_color4"
                    android:textSize="@dimen/level_4" />

                <TextView
                    android:id="@+id/tvCache"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/level_4" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/iv_arrow" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:background="@color/gray" />

            <LinearLayout
                android:id="@+id/llVersion"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/selector_detail"
                android:gravity="center_vertical"
                android:paddingBottom="5dip"
                android:paddingLeft="15dip"
                android:paddingRight="10dip"
                android:paddingTop="5dip" >


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/setting_version"
                    android:textColor="@color/text_color4"
                    android:textSize="@dimen/level_4" />

                <TextView
                    android:id="@+id/tvVersion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/level_4" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/iv_arrow" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:background="@color/gray" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>